[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BlockGravity.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tools/QuantizedTimer.tscn" type="PackedScene" id=3]

[node name="BlockGravity" type="Node"]
script = ExtResource( 1 )

[node name="QuantizedTimer" parent="." instance=ExtResource( 3 )]
ticks_per_minute = 60.0
loop = false
ticks_per_loop = 20.0

[connection signal="on_step" from="QuantizedTimer" to="." method="_on_timer_step"]
[connection signal="on_update" from="QuantizedTimer" to="." method="_on_timer_update"]
